fix overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -815,7 +815,6 @@ section.current__intro {
   margin: 0;
   background: white;
   position: relative;
-  overflow-x: hidden;
   z-index: 2; }
   .portfolio__grid.initial {
     display: none; }
@@ -878,7 +877,8 @@ section.current__intro {
   background: black;
   color: white;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  overflow-x: hidden; }
   .portfolio__horizontal.initial {
     display: none; }
   .portfolio__horizontal .horizontal__title {
